--- a/C2.md
+++ b/C2.md
@@ -36,13 +36,13 @@
 > **[warning] String **
 >1. String is not primative data type.
 >2. String constants would be concatenated at compile time.
->3. C uses “array” of char as a string.
+>3. C uses “array” of chars for storing a string.
 >   * String must ends with a special character '\0'
->       * ```char array2[] = { 'F', 'o', 'o', 'b', 'a', 'r', '\0' }```
+>       * ```char str[] = { 'F', 'o', 'o', 'b', 'a', 'r', '\0' }```
 >   * You would define a string like, in this way the NULL character is hidden
->       * ```char array2[] = “Foobar”```
+>       * ```char str[] = “Foobar”```
 >   * You would use a char* “pointer”, in this way the NULL character is hidden
->       * ```char *array2 = “Foobar”```
+>       * ```char *str = “Foobar”```
 
 <br/>
 
