--- a/C5.md
+++ b/C5.md
@@ -1,9 +1,63 @@
 # Pointers and arrays
 
+> * Pointers
 > * Arrays
 > * Multidimensional Arrays
-> * Pointers
+> * Pointers and array
 
+### Pointer
+
+1. Addresses in Memory
+    * The address of the variable is stored in the memory.
+    * We would use the address operator, an ampersand `&`, to return its address.
+    * The format specifier for address is `%p`.
+2. Number Systems
+
+| Common Name | Base |      Digits      |
+| :---------: | :--: | :--------------: |
+|   binary    |  2   |        01        |
+|    octal    |  8   |     01234567     |
+|   decimal   |  10  |    0123456789    |
+| hexadecimal |  16  | 0123456789ABCDEF |
+3.Pointers
+* A pointer is a variable whose contents are the
+  address of another variable.
+  Let's say that the integer is `int number = 3;` the content of `number` is 3
+  and the address of number is `&number`. We would create a pointer
+  `int *numberPtr;` and copy the address of number to the pointer `numberPtr = &number`. The content of `numberPtr` is
+  the address of `number`.
+* We would use the dereference operator,
+  an asterisk `*`, to modify its locations in memory.
+  Let's say that the integer is `int number = 3;` and
+  the pointer is `int* numberPtr;`. We would copy the address of
+  the number to the pointer `numberPtr = &number`. The content of number
+  is `number`, which is 3. The content of number using pointer is `*numberPtr`, which is 3.
+  We would change waht the pointer points to `*numberPtr = 6`.
+  The content of number will be 6.
+* Pointer `numberPtr` has its own type, a type of
+  `int*` or pointer-to-int.
+* We would increment the address in the pointer `numberPtr++`.
+* Pointers to pointers
+    * Pointers can contain the address of another pointer.
+      `int number = 5;`, `int* numberPtr = &number`, `int** Ptr2 = &numberPtr;`.
+* We would compare the addresses stored in
+  pointers `if(numberPtr1 == numberPtr2)`.
+* We would compare the values of the variables that
+  pointers point to `if(*numberPtr1 == *numberPtr2)`.
+* We would initialize the pointer to `NULL`, `int *numberPtr;`, `numberPtr = NULL`.
+
+4.Pointers and Functions
+
+Pointers allow us to use a process called *pass* by *reference*,
+in which we will be able to change the value of the original variable.
+We do this by passing the variable’s address to the function.
+
+5.Arrays of Pointers
+
+A pointer is a variable type and we can
+have an array of pointers just as we have had arrays of other variable types.
+
+<br/>
 ### Array
 
 1. Array is a variable that can hold more than one value.
@@ -13,11 +67,6 @@
     3. We would also declare and initialize the array at the same time `int a[] = {1, 2, 3, 4, 5, 6, 7, 8, 9}`.
 3. The first element of the array is `a[0]`, the second element is `a[1]`, etc.
 <img src="\images\array.png" alt="array" style="zoom:20%;" />
-4. Let's say that `aptr` is the pointer to the integer `a[0]`, declared as `int *aptr;`.
-    1. `aptr = &a[0]` is the address of `a[0]`.
-    2. `*aptr` is the contents of `a[0]`.
-    3. `aptr + i` is the address of `a[i]`.
-    4. `*(aptr + i)` is the contents of `a[i]`.
 
 <br/>
 
@@ -45,6 +94,110 @@
 > **[warning] 1D and 2D arrays differences **
 ><br/>
 >When declaring a 2D array, the number of columns is required.
+
+<br/>
+
+
+### Pointers and array
+
+Pointers and arrays are closely linked in C.
+
+1. The array name `num` is the address of the first element,
+   and `*num` is the content of the first element.
+
+```c
+/*array name evaluates to the address of
+ * the first element in the array*/
+#include <stdio.h>
+
+int main() {
+    int num[4] = {1, 2, 3, 4};
+    printf("The address of num[0] is %p\n", num);
+    printf("The content of num[0] is %d\n", *num);
+
+    return 0;
+}
+```
+Let's say that `firstPtr` is the pointer to the integer `num[0]`, declared as `int* firstPtr;`.
+1. `firstPtr = &num[0]` is the address of `num[0]`.
+2. `*firstPtr` is the contents of `num[0]`.
+
+```c
+/*array name evaluates to the address of
+ * the first element in the array*/
+#include <stdio.h>
+
+int main() {
+    int num[4] = {1, 2, 3, 4};
+    int* numPtr = num;
+    int* firstPtr = &num[0];
+    printf("The address of num[0] using numPtr is %p\n", numPtr);
+    printf("The content of num[0] using numPtr is %d\n", *numPtr);
+    printf("The address of num[0] using firstPtr is %p\n", firstPtr);
+    printf("The content of num[0] using firstPtr is %d\n", *firstPtr);
+
+    return 0;
+}
+```
+
+2.We would increment the address to move through the array.
+
+```c
+#include <stdio.h>
+
+int main() {
+    int num[4] = {1, 2, 3, 4};
+    printf("The address of num[1] is %p\n", num + 1);
+    printf("The content of num[1] is %d\n", *(num + 1));
+
+    return 0;
+}
+```
+
+Let's say that `firstPtr` is the pointer to the integer `num[0]`, declared as `int* firstPtr;`.
+1. `firstPtr + i` is the address of `num[i]`.
+2. `*(firstPtr + i)` is the contents of `num[i]`.
+
+```c
+#include <stdio.h>
+
+int main() {
+    int num[4] = {1, 2, 3, 4};
+    int* numPtr = num;
+    int* firstPtr = &num[0];
+    printf("The address of num[1] using numPtr is %p\n", numPtr + 1);
+    printf("The content of num[1] using numPtr is %d\n", *(numPtr + 1));
+    printf("The address of num[1] using firstPtr is %p\n", firstPtr + 1);
+    printf("The content of num[1] using firstPtr is %d\n", *(firstPtr + 1));
+
+    return 0;
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
