--- a/C5.md
+++ b/C5.md
@@ -3,7 +3,7 @@
 > * Pointers
 > * Arrays
 > * Multidimensional Arrays
-> * Pointers and array
+> * Pointers and arrays
 
 ### Pointer
 
@@ -98,12 +98,9 @@ have an array of pointers just as we have had arrays of other variable types.
 <br/>
 
 
-### Pointers and array
+### Pointers and arrays
 
-Pointers and arrays are closely linked in C.
-
-1. The array name `num` is the address of the first element,
-   and `*num` is the content of the first element.
+1.Pointers and arrays are closely linked in C.
 
 ```c
 /*array name evaluates to the address of
@@ -118,9 +115,12 @@ int main() {
     return 0;
 }
 ```
-Let's say that `firstPtr` is the pointer to the integer `num[0]`, declared as `int* firstPtr;`.
-1. `firstPtr = &num[0]` is the address of `num[0]`.
-2. `*firstPtr` is the contents of `num[0]`.
+> **[info] Arrays**
+<br/>
+The array name `num` is the address of the first element,
+   and `*num` is the content of the first element.
+>
+
 
 ```c
 /*array name evaluates to the address of
@@ -140,6 +140,14 @@ int main() {
 }
 ```
 
+> **[info] Pointers and arrays**
+<br/>
+Let's say that `firstPtr` is the pointer to
+the integer `num[0]`, declared as `int* firstPtr;`.
+1. `firstPtr = &num[0]` is the address of `num[0]`.
+2. `*firstPtr` is the contents of `num[0]`.
+>
+
 2.We would increment the address to move through the array.
 
 ```c
@@ -154,10 +162,6 @@ int main() {
 }
 ```
 
-Let's say that `firstPtr` is the pointer to the integer `num[0]`, declared as `int* firstPtr;`.
-1. `firstPtr + i` is the address of `num[i]`.
-2. `*(firstPtr + i)` is the contents of `num[i]`.
-
 ```c
 #include <stdio.h>
 
@@ -170,9 +174,133 @@ int main() {
     printf("The address of num[1] using firstPtr is %p\n", firstPtr + 1);
     printf("The content of num[1] using firstPtr is %d\n", *(firstPtr + 1));
 
+    for (int i = 0; i < 4; ++i) {
+        printf("The address of num[%d] using firstPtr is %p\n", i, firstPtr + i);
+        printf("The content of num[%d] using firstPtr is %d\n", i, *(firstPtr + i));
+    }
+
     return 0;
 }
 ```
+
+> **[info] Pointer arithmetic**
+<br/>
+Let's say that `firstPtr` is the pointer to
+the integer `num[0]`, declared as `int* firstPtr;`.
+1. `firstPtr + i` is the address of `num[i]`.
+2. `*(firstPtr + i)` is the contents of `num[i]`.
+>
+
+```c
+#include <stdio.h>
+
+int main() {
+    char charArray[] = {'a', 'b', 'c', 'd', 'e'};
+    int intArray[] = {1, 2, 3, 4, 5};
+    printf("charArray       intArray\n");
+    printf("------------------------------\n");
+    for (int i = 0; i < 5; ++i) {
+        printf("%p  %p\n", charArray + i, intArray + i);
+    }
+
+
+    return 0;
+}
+```
+
+> **[info] Pointer arithmetic**
+<br/>
+Pointer arithmetic handles the task of determining the
+address of the next element in the array.
+>
+
+3.Arrays and functions
+
+> **[info] Arrays as function parameters**
+* We would pass the address of the first
+element of an array `int num[] = {1, 2, 3};` `function(num);`.
+* The subscript style of
+the array as function parameters `void function(int data[]){}`.
+* The pointer style of
+the array as function parameters `void somefunction(int* data){}`.
+>
+
+4.2D Arrays
+
+```c
+#include <stdio.h>
+
+int main() {
+    int data[2][3] = {{1, 2, 3},
+                      {6, 7, 8}};
+    printf("The address of data is %p\n", data);
+    printf("The address of row 0 is %p\n", *data);
+    printf("The value of the data[0][0] is %d\n", **data);
+
+    return 0;
+}
+```
+
+> **[info] 2D Arrays**
+* Returning the address of any element of any row `*(array_name + row) + column`.
+* Returning the value of any element of any row `*(*(array_name + row) + column)`.
+>
+
+5.Pointers to 2D arrays
+
+```c
+#include <stdio.h>
+
+int main() {
+    int data[2][3] = {{1, 2, 3},
+                      {6, 7, 8}};
+    int *ptrOne = &data[0][0];
+    int (*ptrTwo)[3] = data;
+    printf("The first element of array is %p\n", ptrOne);
+    printf("The first element of array is %p\n", ptrTwo[0]);
+
+    return 0;
+}
+```
+
+> **[info] 2D Arrays**
+* We can also create a pointer to a 2D array.
+* The `int *ptrOne = &data[0][0];`
+allows pointer arithmetic based on individual ints.
+* The `int (*ptrTwo)[3] = data;`
+allows pointer arithmetic based on row/column values for accessing the array elements.
+>
+
+6.We can have an array whose members are pointers.
+
+7.The typical use for arrays of pointers is not with
+numeric types, such as int or double, but with
+strings.
+
+<br/>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
